Fix spacing between images

--- a/css/agency.css
+++ b/css/agency.css
@@ -113,6 +113,11 @@ img::-moz-selection {
   margin: auto;
 }
 
+.no-padding {
+  padding: 0;
+  overflow-x: hidden;
+}
+
 #mainNav {
   background-color: #212529;
 }
@@ -348,10 +353,6 @@ header.masthead .intro-text .intro-subheading > span {
   font-style: italic;
   margin: 0;
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
-#product .portfolio-item.no-padding {
-  padding: 0;
 }
 
 #product * {
