--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -57,9 +57,6 @@
         @include serif-font;
       }
     }
-    &.no-padding {
-      padding: 0;
-    }
   }
   * {
     z-index: 2;
